# Pong_IA

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PLAN.md  README.md  TESTING.md  WORKFLOW.md  conftest.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/adr/: README.md
docs/plans/: 2026-04-17-encerramento-treino-e-inferencia-browser.md  2026-04-17-fase-1-motor-pong-browser.md  2026-04-17-fase-2-fundacao-pipeline-treino.md  2026-04-18-d5-10000-oficial-browser.md  2026-04-19-historico-operacional-ate-cleanup.md
docs/references/: README.md
engine/: pyproject.toml
engine/pong_engine/: __init__.py  (+6 more)
scripts/: gen_config.py  gen_fixture.py  gen_frame_stack_fixture.py  parity_check.py
shared/: config.json
tests/: test_gen_config.py
training/: pyproject.toml
training/scripts/: benchmark_training.py  convert_debug_bitmaps.py  dump_debug_bitmaps.py  export.py  train.py
training/src/: __init__.py  batched_reinforce.py  checkpoint.py  debug_bitmap_codec.py  evaluation.py  export_onnx.py  export_viz.py  frame_stack.py  metrics.py  model.py  policy.py  reinforce.py  reward_shaping.py  rollout.py  trainer.py
training/tests/: test_batched_reinforce.py  test_checkpoint.py  test_debug_bitmap_codec.py  test_evaluation.py  test_export_onnx.py  test_export_viz.py  test_frame_stack.py  test_metrics.py  test_model.py  test_policy.py  test_reinforce.py  test_reward_shaping.py  test_rollout.py  test_trainer.py  test_training_health.py
web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
(+36 files in other folders)
